minor css fix for #add on firefox

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -143,6 +143,7 @@ small {
 	border-right: 0;
 	color: #fff;
 	font-weight: bold;
+	height: 26px;
 	padding: 10px 0;
 	text-align: center;
 	width: 100%;
@@ -174,8 +175,6 @@ small {
 
 #add form select {
 	color: #000;
-	height: 22px;
-	padding: 16px;
 }
 
 #add span {
